--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-navigation": "^1.1.397",
+    "react-native-open-maps": "^0.1.3",
+    "react-native-star-rating": "^1.0.9",
+    "react-native-vector-icons": "^4.5.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-persist": "^5.9.1",
